--- a/requirements.txt
+++ b/requirements.txt
@@ -1,6 +1,13 @@
 celery==5.2.7
-Django==4.1.2
-gunicorn==20.1.0
-psycopg2-binary==2.9.5
+Django==4.2.3
+gunicorn==21.2.0
+psycopg2-binary==2.9.6
 python-decouple==3.6
 redis==4.3.4
+plotly==5.18.0
+pandas==2.1.3
+djangorestframework
+django-debug-toolbar==4.2.0
+Pillow
+pyzbar
+django-jazzmin
